# code-leap-assessment

./: .env.example  .gitignore  LICENSE  README.md  manage.py  pyproject.toml  requirements.txt
config/: asgi.py  settings.py  urls.py  wsgi.py
posts/: models.py  serializer.py  tests.py  urls.py  views.py
posts/migrations/: 0001_initial.py
