[project]
name = "code-leap-assessment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ "name" = "Guilherme Azevedo" }]
dependencies = [
    "django>=5.1.3",
    "djangorestframework>=3.15.2",
    "python-dotenv>=1.0.1",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
strict = true

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["ALL"]

extend-ignore = [
    "Q000", # quotes: single quotes are preferred
    "D212", # multi-line-summary-first-line: clashes with D213
    "D",    # pydocstyle: removed during early development
]

[tool.ruff.lint.per-file-ignores]
"tests.py" = ["S101"]
